<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (c) 2016 Samsung Electronics America
 *
 * Permission is hereby granted, free of charge, to any person obtaining
 * a copy of this software and associated documentation files (the "Software"),
 * to deal in the Software without restriction, including without limitation
 * the rights to use, copy, modify, merge, publish, distribute, sublicense,
 * and/or sell copies of the Software, and to permit persons to whom the
 * Software is furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included
 * in all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS
 * OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 * THE SOFTWARE.
-->

<resources>
    <string name="app_name">SamsungVR SDK Sample App</string>
    <string name="email">Email</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="init">Init</string>
    <string name="clear_status">Clear status</string>
    <string name="empty"></string>
    <string name="empty_reactions">No reactions</string>
    <string name="duration">Duration</string>
    <string name="password">Password</string>
    <string name="vr_login">VR Login</string>
    <string name="lib_init_fail">Library init failed</string>
    <string name="lib_init_success">Library init succeeded</string>
    <string name="sso_login">SSO Login</string>
    <string name="sso_refresh">Refresh</string>
    <string name="sso_login_id">SSO Login Id</string>
    <string name="sso_auth_token">SSO Auth Token</string>
    <string name="sso_api_url">SSO API URL</string>
    <string name="sso_auth_url">SSO Auth URL</string>
    <string name="sso_service_missing">Failed to start SSO related activities. Ensure this is a Samsung device and SSO Servies available.</string>
    <string name="no_document_picker_activity">Unable to start document picker activity. You may have to install one.</string>
    <string name="no_sso_account">No SSO Account found</string>
    <string name="show_password">Show password</string>
    <string name="auth_failure">Login failed. Status %1$d</string>
    <string name="auth_success">Logged in as %1$s</string>
    <string name="auth_cancelled">Login was cancelled</string>
    <string name="refresh">Refresh</string>
    <string name="in_progress">Request in progress ...</string>
    <string name="success">Success</string>
    <string name="failure">Failure</string>
    <string name="upload">Upload</string>
    <string name="publish">Publish</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="publish_from_file_2">Stream from MP4/TS</string>
    <string name="publish_from_cam_2">Stream from CAM</string>
    <string name="publish_from_file">MP4/TS stream</string>
    <string name="publish_from_cam">CAM stream</string>
    <string name="segment_camera">Publish from Camera</string>
    <string name="start_cam_stream">Start</string>
    <string name="stop_cam_stream">Stop</string>
    <string name="available_cams">Available Cameras</string>
    <string name="cam_preview">Camera Preview</string>
    <string name="pick_segment">Pick segment</string>
    <string name="cancelled">Cancelled</string>
    <string name="create_live_event">Create live event</string>
    <string name="incorrect_input">Double check input fields</string>
    <string name="failure_with_status">Failed with status %1$d</string>
    <string name="failure_with_exception">Failed with exception %1$s</string>
    <string name="get_user_by_session_info">Get User</string>
    <string name="session_info">Session info</string>
    <string name="user_id">User id</string>
    <string name="user_name">User name</string>
    <string name="user_email">User email</string>
    <string name="user_profile_pic">User profile pic</string>
    <string name="by_id">By id</string>
    <string name="by_token">By token</string>
    <string name="by_json">By json</string>
    <string name="delete">Delete</string>
    <string name="finish">Finish</string>
    <string name="watch_using">Watch using</string>
    <string name="no_player_for_watch">No players found to process streaming media</string>
    <string name="pending_generation">Yet to be generated</string>
    <string name="list_all">List all</string>
    <string name="add">Add</string>
    <string name="end_point_url">End point URL</string>
    <string name="api_key">API Key</string>
    <string name="apply">Apply</string>
    <string name="edit">Edit</string>
    <string name="select">Select</string>
    <string name="api_key_empty">API Key is empty</string>
    <string name="end_point_url_empty">End point url is empty</string>
    <string name="select_config">Select a config</string>
    <string name="invalid_config">Invalid config. Please select in login screen.</string>
    <string name="invalid_sso_app_id">Invalid SSO App id. Please select in login screen.</string>
    <string name="invalid_sso_app_secret">Invalid SSO App secret. Please select in login screen.</string>
    <string name="vr_account">VR account</string>
    <string name="sso_account">SSO account</string>
    <string name="config_uri">Specify config uri</string>
    <string name="pick_config_uri">Pick cfg uri</string>
    <string name="load_config_from_uri">Load cfg</string>
    <string name="save_config_to_uri">Save cfg</string>
    <string name="sso_app_id">SSO app id</string>
    <string name="sso_app_secret">SSO app secret</string>
    <string name="choose_file">Select file to upload</string>
    <string name="missing_app_file_chooser">Please install an app that can choose files. Google devices ship with DocumentsUI.</string>
    <string name="bitrate">Bitrate kbs</string>
    <string name="retry">Retry</string>
    <string name="abort">Abort</string>
    <string name="create_sso_account">Create SSO account</string>
    <string name="create_vr_account">Create VR account</string>
    <string name="create_user_failure">Create user failed. Status %1$d</string>
    <string name="create_user_cancelled">Create user was cancelled</string>
    <string name="create_user_success">Created user with id %1$s</string>
    <string name="create_account">New user? Create an account</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <string-array name="live_video_protocols">
        <item>rtmp</item>
    </string-array>

    <string-array name="user_options">
        <item>Create live event</item>
        <item>List live events</item>
        <item>Upload video</item>
        <item>Get user by session info</item>
        <item>Logout</item>

    </string-array>

</resources>
