<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (c) 2016 Samsung Electronics America
 *
 * Permission is hereby granted, free of charge, to any person obtaining
 * a copy of this software and associated documentation files (the "Software"),
 * to deal in the Software without restriction, including without limitation
 * the rights to use, copy, modify, merge, publish, distribute, sublicense,
 * and/or sell copies of the Software, and to permit persons to whom the
 * Software is furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included
 * in all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS
 * OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 * THE SOFTWARE.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    >

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:id="@+id/getUser"
        android:text="@string/get_user_by_session_info"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginBottom="10dp"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_blue_dark"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton android:id="@+id/by_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_id"
            android:checked="true"
            />

        <RadioButton android:id="@+id/by_token"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_token"
            />
    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/session_info"
        android:hint="@string/session_info"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:maxLines="5"
        android:lines="5"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="3"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/status"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/user_id"
        android:hint="@string/user_id"
        android:textColor="@android:color/black"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/user_name"
        android:hint="@string/user_name"
        android:textColor="@android:color/black"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/user_email"
        android:hint="@string/user_email"
        android:textColor="@android:color/black"
        android:layout_marginBottom="10dp"
        />

    <com.samsung.msca.samsungvr.sampleapp.SimpleNetworkImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/user_profile_pic"
        android:hint="@string/user_profile_pic"/>

</LinearLayout>