<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (c) 2016 Samsung Electronics America
 *
 * Permission is hereby granted, free of charge, to any person obtaining
 * a copy of this software and associated documentation files (the "Software"),
 * to deal in the Software without restriction, including without limitation
 * the rights to use, copy, modify, merge, publish, distribute, sublicense,
 * and/or sell copies of the Software, and to permit persons to whom the
 * Software is furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included
 * in all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS
 * OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 * THE SOFTWARE.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@android:color/white"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/end_point"
            android:text="@string/select_config"
            android:textColor="@android:color/black"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/grp_login"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/vr_account"
                android:textColor="@android:color/white"
                android:background="@android:color/background_dark"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:hint="@string/email"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:maxLines="1"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:hint="@string/password"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:maxLines="1"
                />

            <CheckBox
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="left"
                android:id="@+id/showPassword"
                android:text="@string/show_password"
                android:checked="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                />

            <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:id="@+id/vr_login"
                android:text="@string/vr_login"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sso_account"
                android:textColor="@android:color/white"
                android:background="@android:color/background_dark"
                android:layout_marginBottom="5dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/grp_sso_login">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sso_login_id"
                    android:layout_gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:maxLines="1"
                    android:layout_marginBottom="5dp"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sso_auth_token"
                    android:hint="@string/sso_auth_token"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:maxLines="1"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sso_api_url"
                    android:hint="@string/sso_api_url"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:maxLines="1"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sso_auth_url"
                    android:hint="@string/sso_auth_url"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:maxLines="1"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    >

                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:id="@+id/sso_login"
                        android:text="@string/sso_login"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        />

                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:id="@+id/sso_refresh"
                        android:text="@string/sso_refresh"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/status"
            android:textColor="@android:color/holo_red_dark"
            />

    </LinearLayout>


</ScrollView>