<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (c) 2016 Samsung Electronics America
 *
 * Permission is hereby granted, free of charge, to any person obtaining
 * a copy of this software and associated documentation files (the "Software"),
 * to deal in the Software without restriction, including without limitation
 * the rights to use, copy, modify, merge, publish, distribute, sublicense,
 * and/or sell copies of the Software, and to permit persons to whom the
 * Software is furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included
 * in all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS
 * OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 * THE SOFTWARE.
-->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >

    <LinearLayout
        android:orientation="vertical"
        android:minWidth="300dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:background="@android:color/white"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/grp_sso_account">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sso_account"
                android:textColor="@android:color/white"
                android:background="@android:color/background_dark"
                android:layout_marginBottom="10dp"
                />

            <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:id="@+id/create_sso_account"
                android:text="@string/create_sso_account"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginBottom="20dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/grp_vr_account">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/vr_account"
                android:textColor="@android:color/white"
                android:background="@android:color/background_dark"
                android:layout_marginBottom="10dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_name"
                android:hint="@string/user_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:maxLines="1"
                android:layout_marginBottom="10dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:hint="@string/email"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:maxLines="1"
                android:layout_marginBottom="10dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:hint="@string/password"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:maxLines="1"
                android:layout_marginBottom="10dp"
                />

            <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:id="@+id/create_vr_account"
                android:text="@string/create_vr_account"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginBottom="20dp"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/status"
            android:textColor="@android:color/holo_red_dark"
            />


    </LinearLayout>


</FrameLayout>